			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03f: *********************************

IMP/MAN: (09/02/05, GVG) Italian font when cells/libraries are marked with minor changes. Minor/major status
also valid for cells. Some code to determine if cells can be removed.

IMP/MAN: (09/02/05, GVG) Bold/italic fonts also for groups (Bugzilla #XXX)

BUG: (09/2/05, GVG) Exception in Cell information if no DRC was run (no Bugzilla)
FIX: DRC.getActiveBits() needs Technology as parameter.

IMP: (09/02/05, DN) Speed up redisplay:
  1) Don't use slow Math.round in databaseToScreen .
  2) Don't initialize temporary EditWindow when create PixelDrawing for subcell.

BUG: (09/02/05, SMR) Zero width arcs are drawn incorrectly (Bugs #521 & #522).
FIX: Incorrect optimization of zero-width arcs repaired.

IMP/MAN (09/01/05, JKG) Simple Parasitic Extraction from layout for spice

IMP: (09/01/05, SMR) Speed up redisplay.

IMP: (08/31/05, SMR) EDIF I/O configuration now handles global name conversion.

************************* Version 8.03e: *********************************

IMP: (08/30/05, SMR) Initial changes to speed up redisplay when small amounts change.

IMP/MAN: (08/29/05, SMR) Improved EDIF I/O (and the "edif.cfg" file) for Cadence compatiblity.

BUG: (08/29/05, SMR) Drawing transparent layers from a technology other than the current
     produces an error and fails to draw the layers (Bug #500).
FIX: In PixelDrawing.java, convert the transparent layers to opaque layers.

BUG: (08/29/05, SMR) Closing a library is prevented if instances from it are in the clipboard (Bug #504).
FIX: Clear the clipboard in such situations.

IMP/MAN (08/30/05, GVG) Changes in DRC documentation to deal with Bug #496

IMP: (08/27/05, DN) Connections of NodeInst are sorted by port index. This speeds
    up PortInst.getConnections() method in case of cell instances with many exports.
